# sageTSDB

./: .gitignore  .secrets.baseline  CMakeLists.txt  CMakeLists.txt.backup  DOCUMENTATION_CLEANUP_SUMMARY.md  PECJ_INTEGRATION_FIX.md  PYTORCH_INTEGRATION_SUCCESS.md  QUICKSTART.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.1.5.md  SETUP.md  SUBMODULE.md  TABLE_DESIGN_FILES.md  build.sh  build_plugins.sh  pyproject.toml  setup_repo.sh
.github/: copilot-instructions.md
.github/workflows/: build-wheels.yml  ci.yml
cmake/: sageTSDBConfig.cmake.in
docker/: Dockerfile.manylinux
docs/: DESIGN_DOC_SAGETSDB_PECJ.md  LSM_TREE_IMPLEMENTATION.md  PECJ_BENCHMARK_README.md  PECJ_COMPUTE_ENGINE_IMPLEMENTATION.md  PECJ_DEEP_INTEGRATION_SUMMARY.md  PERSISTENCE_IMPLEMENTATION.md  README.md  RESOURCE_MANAGER_GUIDE.md  WHEEL_BUILD_AND_PYPI_PUBLISH.md
docs/algorithms/: README.md
docs/compute/: PECJ_OPERATORS_INTEGRATION.md  README.md
docs/core/: PERSISTENCE.md  README.md  TABLE_DESIGN_IMPLEMENTATION.md
docs/examples/: README.md  README_HIGH_DISORDER_DEMO.md  REORGANIZATION_NOTES.md
docs/plugins/: README.md
docs/utils/: README.md
examples/: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  DEMO_SUMMARY.md  FINE_GRAINED_TIMING_UPDATE.md  FONT_FIX_NOTES.md  QUICKSTART.md  QUICKSTART_VISUALIZATION.md  README.md  README_DEEP_INTEGRATION_DEMO.md  README_PECJ_DEMO.md  RUN_AND_VISUALIZE_UPDATE.md  TIMING_ANALYSIS_REPORT.md  VISUALIZATION_GUIDE.md  VISUALIZE_BENCHMARK_UPDATE.md  csv_data_loader.h  deep_integration_demo.cpp  demo_configs.json  fine_grained_timing_results.json  fine_grained_timing_results.txt  pecj_compute_example.cpp  pecj_integrated_vs_plugin_benchmark.cpp  pecj_shj_comparison_demo.cpp  performance_benchmark.cpp  persistence_example.cpp  plugin_usage_example.cpp  run_demo.sh  test_results.json  visualize_timing.py  window_scheduler_demo.cpp
examples/basic/: table_design_demo.cpp  window_scheduler_demo.cpp
examples/integration/: deep_integration_demo.cpp  integrated_demo.cpp  pecj_replay_demo.cpp  pecj_shj_comparison_demo.cpp
examples/python/: README.md  advanced_dag_example.py  basic_dag_example.py  stream_join_dag_example.py
examples/visualization/: run_and_visualize.sh  test_fine_grained_timing.sh  visualize_benchmark.py
include/sage_tsdb/algorithms/: algorithm_base.h  stream_join.h  window_aggregator.h
include/sage_tsdb/compute/: compute_state_manager.h  pecj_compute_engine.h  window_scheduler.h
include/sage_tsdb/core/: join_result_table.h  lsm_tree.h  resource_manager.h  storage_engine.h  stream_table.h  table_manager.h  time_series_data.h  time_series_db.h  time_series_index.h
include/sage_tsdb/plugins/: plugin_interface.h  plugin_manager.h  resource_manager.h
include/sage_tsdb/plugins/adapters/: pecj_adapter.h
include/sage_tsdb/utils/: common.h  csv_data_loader.h
python/: CMakeLists.txt  __init__.py
sage_tsdb/: CMakeLists.txt  _version.py
scripts/: .gitignore  CLEANUP_SUMMARY.md  README.md  benchmark_disorder.sh  build.sh  build_and_test.sh  build_manylinux_wheel.sh  build_native_wheel.sh  build_pecj_integrated.sh  build_table_design.sh  build_window_scheduler.sh  compare_pecj_modes.sh  demo_disorder_showcase.sh  run_high_disorder_demo.sh  run_pecj_shj_comparison.sh  test_lsm_tree.sh  upload_to_pypi.sh
scripts/demo/: README.md  run_demo.sh  run_disorder_demo.sh  run_pecj_shj_comparison.sh
scripts/test/: README.md
src/algorithms/: README.md  algorithm_base.cpp  stream_join.cpp  window_aggregator.cpp
src/compute/: CMakeLists.txt  README.md  compute_state_manager.cpp  pecj_compute_engine.cpp  window_scheduler.cpp
src/core/: join_result_table.cpp  lsm_tree.cpp  resource_manager.cpp  storage_engine.cpp  stream_table.cpp  table_manager.cpp  time_series_data.cpp  time_series_db.cpp  time_series_index.cpp
src/plugins/: CMakeLists.txt  plugin_manager.cpp  resource_manager.cpp
src/plugins/adapters/: fault_detection_adapter.cpp  pecj_adapter.cpp
src/utils/: config.cpp
test/plugins/: test_resource_manager.cpp
tests/: CMakeLists.txt  README.md  test_fault_detection_plugin.cpp  test_integrated_mode.cpp  test_pecj_compute_engine.cpp  test_pecj_operators.cpp  test_pecj_plugin.cpp  test_resource_manager.cpp  test_storage_engine.cpp  test_stream_join.cpp  test_table_design.cpp  test_time_series_data.cpp  test_time_series_db.cpp  test_time_series_index.cpp  test_window_aggregator.cpp  test_window_scheduler.cpp  test_window_scheduler_simple.cpp
tests/compute/: pecj_compute_engine_test.cpp
