[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0",
    "cmake>=3.15",
]
build-backend = "scikit_build_core.build"

[project]
name = "isage-tsdb"
dynamic = ["version"]
description = "High-Performance Time Series Database with C++ Core"
readme = "README.md"
authors = [
    { name = "SAGE Team", email = "shuhao_zhang@hust.edu.cn" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/sageTSDB"
Repository = "https://github.com/intellistream/sageTSDB.git"
"Bug Tracker" = "https://github.com/intellistream/sageTSDB/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/_version.py"
regex = "__version__ = [\"']([^\"']+)[\"']"
result = "{0}"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
